--- a/sign-up.html
+++ b/sign-up.html
@@ -11,9 +11,9 @@
     <div class="sign-up">
       <h1 class="pagetitle">Sign Up</h1>
       <form action="">
-        <input type="username" name="username" class="sign" />
-        <input type="email" name="email" class="sign" />
-        <input type="password" name="password" class="sign" />
+        <input type="username" name="username" class="sign" placeholder="Username" />
+        <input type="email" name="email" class="sign" placeholder="example1234@email.com"/>
+        <input type="password" name="password" class="sign" placeholder="Password"/>
         <button type="submit" class="button">Sign Up</button>
         <p class="or">or Sign up with social platforms</p>
       </form>
